# scarecrow-desktop

./: AUTHORS  CONTRIBUTING.md  ChangeLog-20020212  ChangeLog.pre-git  HACKING  NEWS  README  meson.build  meson_options.txt
.ci/: check-abi
desktop-docs/fdl/cs/: cs.po
desktop-docs/fdl/de/: de.po
desktop-docs/fdl/fr/: fr.po
desktop-docs/fdl/gl/: gl.po
desktop-docs/fdl/hu/: hu.po
desktop-docs/fdl/oc/: oc.po
desktop-docs/fdl/pt_BR/: pt_BR.po
desktop-docs/fdl/sl/: sl.po
desktop-docs/fdl/zh_CN/: zh_CN.po
desktop-docs/gpl/de/: de.po
desktop-docs/gpl/fi/: fi.po
desktop-docs/gpl/fr/: fr.po
desktop-docs/gpl/gl/: gl.po
desktop-docs/gpl/hu/: hu.po
desktop-docs/gpl/nds/: nds.po
desktop-docs/gpl/oc/: oc.po
desktop-docs/gpl/pt_BR/: pt_BR.po
desktop-docs/gpl/sl/: sl.po
desktop-docs/lgpl/ca/: ca.po
desktop-docs/lgpl/cs/: cs.po
desktop-docs/lgpl/de/: de.po
desktop-docs/lgpl/fi/: fi.po
desktop-docs/lgpl/fr/: fr.po
desktop-docs/lgpl/gl/: gl.po
desktop-docs/lgpl/hu/: hu.po
desktop-docs/lgpl/oc/: oc.po
desktop-docs/lgpl/pt_BR/: pt_BR.po
desktop-docs/lgpl/sl/: sl.po
docs/reference/scarecrow-desktop3/: meson.build  scarecrow-desktop3-docs.sgml  scarecrow-desktop3-sections.txt  scarecrow-desktop3.types
libscarecrow-desktop/: ChangeLog.pre-git  idle-monitor.xml  meson.build  meta-xrandr-shared.h  scarecrow-bg-crossfade.c  scarecrow-bg-crossfade.h  scarecrow-bg-slide-show.c  scarecrow-bg-slide-show.h  scarecrow-bg.c  scarecrow-bg.h  scarecrow-datetime-source.c  scarecrow-desktop-3.0-uninstalled.pc.in  scarecrow-desktop-3.0.pc.in  scarecrow-desktop-thumbnail-script.c  scarecrow-desktop-thumbnail.c  scarecrow-desktop-thumbnail.h  scarecrow-idle-monitor.c  scarecrow-idle-monitor.h  scarecrow-languages.c  scarecrow-languages.h  scarecrow-pnp-ids.c  scarecrow-rr-config.c  scarecrow-rr-config.h  scarecrow-rr-debug.c  scarecrow-rr-output-info.c  scarecrow-rr.c  scarecrow-rr.h  scarecrow-systemd.c  scarecrow-systemd.h  scarecrow-wall-clock.c  scarecrow-wall-clock.h  scarecrow-xkb-info.c  test-desktop-thumbnail.c  test-idle-monitor.c  test-languages.c  test-pnp-ids.c  test-wall-clock.c  test-xkb-info.c  xrandr.xml
po/: ChangeLog.pre-git  Makevars  POTFILES.in  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  (+81 more)
tests/: meson.build  wall-clock.c  wallclock-reftest.c
